--- a/lovely.toml
+++ b/lovely.toml
@@ -166,7 +166,8 @@ target = "functions/button_callbacks.lua"
 pattern = '''add_tag(_tag.config.ref_table)'''
 position = "at"
 payload = '''
-add_tag(Cryptid.get_next_tag or _tag.config.ref_table, true)
+local tag = Cryptid.get_next_tag()
+add_tag(tag and Tag(tag) or _tag.config.ref_table, true)
 '''
 match_indent = true
 
