talisman-less loc fixes

--- a/lovely.toml
+++ b/lovely.toml
@@ -24,27 +24,27 @@ target = "functions/common_events.lua"
 pattern = "elseif eval_type == 'dollars' then"
 position = "before"
 payload = '''
-elseif eval_type == 'x_chips' then 
-	sound = 'cry_xchip'
-	amt = amt
-	text = 'X' .. amt
-	colour = G.C.CHIPS
-	config.type = 'fade'
-	config.scale = 0.7
-elseif eval_type == 'e_chips' then 
-	sound = 'cry_echip'
-	amt = amt
-	text = '^' .. amt
-	colour = G.C.CHIPS
-	config.type = 'fade'
-	config.scale = 0.7
-elseif eval_type == 'e_mult' then 
-	sound = 'cry_emult'
-	amt = amt
-	text = '^' .. amt .. ' ' .. localize('k_mult')
-	colour = G.C.MULT
-	config.type = 'fade'
-	config.scale = 0.7
+    elseif eval_type == 'x_chips' then
+    	sound = 'cry_xchip'
+    	amt = amt
+    	text = 'X' .. amt
+    	colour = G.C.CHIPS
+    	config.type = 'fade'
+    	config.scale = 0.7
+    elseif eval_type == 'e_chips' then
+    	sound = 'cry_echips'
+    	amt = amt
+    	text = '^' .. amt .. ' ' .. localize('k_chips')
+    	colour = G.C.DARK_EDITION
+    	config.type = 'fade'
+    	config.scale = 0.7
+    elseif eval_type == 'e_mult' then
+    	sound = 'cry_emult'
+    	amt = amt
+    	text = '^' .. amt .. ' ' .. localize('k_mult')
+    	colour = G.C.DARK_EDITION
+    	config.type = 'fade'
+    	config.scale = 0.7
 '''
 match_indent = true
 
