fix display of echips & mult

--- a/lovely.toml
+++ b/lovely.toml
@@ -27,21 +27,21 @@ payload = '''
     elseif eval_type == 'x_chips' then
     	sound = 'cry_xchip'
     	amt = amt
-    	text = 'X' .. amt
+    	text = 'X' .. number_format(amt)
     	colour = G.C.CHIPS
     	config.type = 'fade'
     	config.scale = 0.7
     elseif eval_type == 'e_chips' then
     	sound = 'cry_echips'
     	amt = amt
-    	text = '^' .. amt .. ' ' .. localize('k_chips')
+    	text = '^' .. number_format(amt) .. ' ' .. localize('k_chips')
     	colour = G.C.DARK_EDITION
     	config.type = 'fade'
     	config.scale = 0.7
     elseif eval_type == 'e_mult' then
     	sound = 'cry_emult'
     	amt = amt
-    	text = '^' .. amt .. ' ' .. localize('k_mult')
+    	text = '^' .. number_format(amt) .. ' ' .. localize('k_mult')
     	colour = G.C.DARK_EDITION
     	config.type = 'fade'
     	config.scale = 0.7
