--- a/lovely.toml
+++ b/lovely.toml
@@ -18,33 +18,34 @@ assembled_string = assembled_string..(type(subpart) == 'string' and subpart or (
 '''
 match_indent = true
 
+#i know its ugly but its to make sure it doesnt do stuff when talisman is installed
 [[patches]]
 [patches.pattern]
 target = "functions/common_events.lua"
 pattern = "elseif eval_type == 'dollars' then"
 position = "before"
 payload = '''
-    elseif eval_type == 'x_chips' then
-    	sound = 'cry_xchip'
-    	amt = amt
-    	text = 'X' .. number_format(amt)
-    	colour = G.C.CHIPS
-    	config.type = 'fade'
-    	config.scale = 0.7
-    elseif eval_type == 'e_chips' then
-    	sound = 'cry_echips'
-    	amt = amt
-    	text = '^' .. number_format(amt) .. ' ' .. localize('k_chips')
-    	colour = G.C.DARK_EDITION
-    	config.type = 'fade'
-    	config.scale = 0.7
-    elseif eval_type == 'e_mult' then
-    	sound = 'cry_emult'
-    	amt = amt
-    	text = '^' .. number_format(amt) .. ' ' .. localize('k_mult')
-    	colour = G.C.DARK_EDITION
-    	config.type = 'fade'
-    	config.scale = 0.7
+elseif eval_type == 'x_chips' and not (SMODS.Mods["Talisman"] or {}).can_load then
+    sound = 'cryl_xchip'
+    amt = amt
+    text = 'X' .. number_format(amt)
+    colour = G.C.CHIPS
+    config.type = 'fade'
+    config.scale = 0.7
+elseif eval_type == 'e_chips' and not (SMODS.Mods["Talisman"] or {}).can_load then
+    sound = 'cryl_echips'
+    amt = amt
+    text = '^' .. number_format(amt) .. ' ' .. localize('k_chips')
+    colour = G.C.DARK_EDITION
+    config.type = 'fade'
+    config.scale = 0.7
+elseif eval_type == 'e_mult' and not (SMODS.Mods["Talisman"] or {}).can_load then
+    sound = 'cryl_emult'
+    amt = amt
+    text = '^' .. number_format(amt) .. ' ' .. localize('k_mult')
+    colour = G.C.DARK_EDITION
+    config.type = 'fade'
+    config.scale = 0.7
 '''
 match_indent = true
 
